Aggiunto tipo mappa Terrain

--- a/trunk/plg_contentmap/en-GB.plg_content_contentmap.ini
+++ b/trunk/plg_contentmap/en-GB.plg_content_contentmap.ini
@@ -103,3 +103,5 @@ GOOGLE SERCH=Enable search
 GOOGLE SERCH DESC=Enable tool for Google search
 STREET VIEW=Enable Street View
 STREET VIEW DESC=Select if to display or not street view under the map
+#Version 1.0.3
+TERRAIN=Terrain
