--- a/trunk/plg_contentmap/it-IT.plg_content_contentmap.ini
+++ b/trunk/plg_contentmap/it-IT.plg_content_contentmap.ini
@@ -103,3 +103,5 @@ GOOGLE SERCH=Abilita ricerca
 GOOGLE SERCH DESC=Abilita tool per la ricerca di Google
 STREET VIEW=Abilita Street View
 STREET VIEW DESC=Scegli se visualizzare o meno lo street view sotto alla mappa
+#Version 1.0.3
+TERRAIN=Terreno
