Inserita possibilità di cambiare il colore del titolo e corretto errore che non faceva più vedere la data sotto al titolo

--- a/trunk/plg_contentmap/en-GB.plg_content_contentmap.ini
+++ b/trunk/plg_contentmap/en-GB.plg_content_contentmap.ini
@@ -105,3 +105,5 @@ STREET VIEW=Enable Street View
 STREET VIEW DESC=Select if to display or not street view under the map
 #Version 1.0.3
 TERRAIN=Terrain
+TITLECOLOR=Article title color
+TITLECOLOR DESC=Insert the hexidecimal value (i.e. #000000) to change the color of the article title that appears within the info window
