--- a/trunk/plg_contentmap/it-IT.plg_content_contentmap.ini
+++ b/trunk/plg_contentmap/it-IT.plg_content_contentmap.ini
@@ -105,3 +105,5 @@ STREET VIEW=Abilita Street View
 STREET VIEW DESC=Scegli se visualizzare o meno lo street view sotto alla mappa
 #Version 1.0.3
 TERRAIN=Terreno
+TITLECOLOR=Colore titolo articolo
+TITLECOLOR DESC=Inserisci il valore esadecimale (es. #000000) per cambiare il colore del titolo dell'articolo che appare all'interno del fumetto
